# Hybrid-64

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
core/: CMakeLists.txt
core/include/hybrid64/: drive.h  error.h  version.h
core/src/: drive.c
docs/: BLOCK_DEVICES.md  DEPENDENCIES.md  SPEC.md  architecture.md
hardware/constraints/: hybrid64.xdc
hardware/rtl/: alu64.v  cpu_core.v  memory64.v  regfile64.v
hardware/sim/: tb_alu64.v  tb_cpu.v
platform/posix/: CMakeLists.txt
platform/posix/include/: posix_drive.h
platform/posix/src/: posix_drive.c
platform/posix/tools/: hybrid64.c
simulation/: emulator.py
simulation/tests/: test_emulator.py
software/apps/: main.c
software/drivers/: cpu_driver.c  cpu_driver.h
software/hal/: hal.c  hal.h  test_hal.c
software/scripts/: add-complementary-64bit-backends.sh  add-legacy-hybrid-64bit.sh
tools/: deadpgp_sign_docs.py
